# securesockets

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json  gen_certs.sh  run_tests.sh  securesockets.pc.in  sockets.pc.in  test  test.cpp
docs/: Doxyfile
examples/: Makefile  blockingclient.cpp  blockingserver.cpp  cert.pem  cli  cli.cpp  cli_nonblock  cli_nonblock.cpp  client  client.cpp  insecureclientserver  insecureclientserver.cpp  key.pem  multipleblockingclients.cpp  multiplenonblockingclients.cpp  nonblockingclient.cpp  nonblockingserver.cpp  serv  serv.cpp  serv_nonblock.cpp  server  server.cpp
examples/cert/: ca.crt  ca.key  cert.pem  key.pem  server.crt  server.key
include/securesockets/: SecureTCPClient.hpp  SecureTCPServer.hpp  SocketUtils.hpp  TCPSocket.hpp
include/sockets/: IPAddress.hpp  SSLSocket.hpp  SSLTCPClientSocket.hpp  Socket.hpp  SocketHandle.hpp  SocketImpl.hpp  TCPClientSocket.hpp  TCPServerSocket.hpp  TCPSocket.hpp  UDPSocket.hpp
include/sockets/Unix/: OpenSSL.hpp
include/sockets/Windows/: Headers.hpp  WinSock2.hpp
old/: SecureTCPServer.cpp
src/: CMakeLists.txt  main.cpp
src/securesockets/: SecureTCPClient.cpp  SecureTCPServer.cpp  TCPSocket.cpp
src/sockets/: IPAddress.cpp  Socket.cpp  TCPClientSocket.cpp  TCPServerSocket.cpp  TCPSocket.cpp  UDPSocket.cpp
src/sockets/Unix/: SSLSocket.cpp  SSLSocketImpl.cpp  SSLTCPClientSocketImpl.cpp  SocketImpl.cpp
src/sockets/Windows/: SocketImpl.cpp  defines.cpp
test/: CMakeLists.txt  IPAddressTest.cpp  SSLTCPClientSocketTest.cpp  SocketTest.cpp  TCPTest.cpp  UDPSocketTest.cpp
